<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ContainerMenuFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSimpleMenu"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="0dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/primary_button"
            android:textColor="@color/tertiary_color"
            android:text="@string/men" />

        <Button
            android:id="@+id/buttonExtras"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="0dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/secondary_button"
            android:textColor="@color/primary_color"
            android:text="@string/extras" />

        <Button
            android:id="@+id/buttonBeverages"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="0dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/secondary_button"
            android:textColor="@color/primary_color"
            android:text="@string/bebidas" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
