<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ContainerShoppingCartFragment">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/infocart" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/LLMyOrder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_shape_other"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TTMyOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order"
                    android:textAlignment="center"
                    android:textColor="@color/base_color" />
            </LinearLayout>

            <View
                android:id="@+id/ViewLevel1"
                android:layout_width="80dp"
                android:layout_height="5dp"
                android:background="@color/tertiary_variant_color" />

            <LinearLayout
                android:id="@+id/LLDetails"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TTDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textAlignment="center"
                    android:textColor="@color/highlighted_color" />
            </LinearLayout>

            <View
                android:id="@+id/ViewLevel2"
                android:layout_width="80dp"
                android:layout_height="5dp"
                android:background="@color/tertiary_variant_color" />

            <LinearLayout
                android:id="@+id/LLPay"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/rounded_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TTPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:textAlignment="center"
                    android:textColor="@color/highlighted_color" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/barrerTopOptions"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primary_color"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"

                android:layout_marginBottom="16dp"
                android:background="@drawable/primary_button"

                android:backgroundTint="@color/tertiary_variant_color"
                android:text="Cancelar"
                android:textColor="@color/highlighted_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButtonDeleteItem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginEnd="16dp"
                android:background="@color/primary_color"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_delete_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        </androidx.viewpager.widget.ViewPager>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/secondary_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:id="@+id/containrbtnNextPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnNextPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingHorizontal="30dp"
                    android:text="@string/next_step"
                    android:textColor="@color/tertiary_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>